--- a/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/searches_for_a_local_Publication_by_pmid_and_returns_a_pubhash.yml
+++ b/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/searches_for_a_local_Publication_by_pmid_and_returns_a_pubhash.yml
@@ -145,4 +145,79 @@ http_interactions:
         />\r\n    <CopyrightCountry>UNITED STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
   recorded_at: Tue, 05 Apr 2016 23:40:42 GMT
+- request:
+    method: get
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/143766?format=xml&page=0&pageSize=2147483647&v=version/4
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Accept:
+      - "*/*"
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:38:32 GMT
+      Licenseid:
+      - Settings.SCIENCEWIRE.LICENSE_ID
+      Host:
+      - Settings.SCIENCEWIRE.HOST
+      Connection:
+      - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Wed, 04 May 2016 00:38:32 GMT
+      Content-Length:
+      - '2101'
+    body:
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
+        \   <PublicationItemID>42711845</PublicationItemID>\r\n    <Title>Frostbite:
+        an orthopedic perspective.</Title>\r\n    <Abstract>Frostbite injury to the
+        extremities has the potential for disastrous effects. This review provides
+        information valuable to the orthopedic surgeon to aid in the evaluation and
+        treatment of frostbite. The pathophysiology and predisposing factors that
+        provide a basic understanding of the nature of frostbite are discussed. Accepted
+        and experimental imaging studies and treatment options are also reviewed.
+        An effort is made to give the orthopedic perspective on each issue, providing
+        a valuable resource for all orthopedic surgeons involved in the care of the
+        patient with frostbite.</Abstract>\r\n    <AuthorList>McAdams,T,R|Swenson,D,R|MILLER,R,A</AuthorList>\r\n
+        \   <AuthorCount>3</AuthorCount>\r\n    <KeywordList />\r\n    <DocumentTypeList>Journal
+        Article|Review</DocumentTypeList>\r\n    <DocumentCategory>Journal Document</DocumentCategory>\r\n
+        \   <NumberOfReferences>44</NumberOfReferences>\r\n    <TimesCited xsi:nil=\"true\"
+        />\r\n    <TimesNotSelfCited xsi:nil=\"true\" />\r\n    <PMID>10048354</PMID>\r\n
+        \   <PublicationSourceTitle>American journal of orthopedics (Belle Mead, N.J.)</PublicationSourceTitle>\r\n
+        \   <Volume>28</Volume>\r\n    <Issue>1</Issue>\r\n    <Pagination>21-26</Pagination>\r\n
+        \   <PublicationDate>1999-01-01T00:00:00</PublicationDate>\r\n    <PublicationYear>1999</PublicationYear>\r\n
+        \   <PublicationSubjectCategoryList />\r\n    <ISSN>1078-4519</ISSN>\r\n    <ConferenceStartDate
+        xsi:nil=\"true\" />\r\n    <ConferenceEndDate xsi:nil=\"true\" />\r\n    <Rank
+        xsi:nil=\"true\" />\r\n    <OrdinalRank>0</OrdinalRank>\r\n    <NormalizedRank
+        xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\" />\r\n    <IsObsolete>false</IsObsolete>\r\n
+        \   <CopyrightPublisher />\r\n    <CopyrightCity />\r\n    <CopyrightStateProvince
+        />\r\n    <CopyrightCountry>UNITED STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
+    http_version: 
+  recorded_at: Wed, 04 May 2016 00:38:32 GMT
 recorded_with: VCR 3.0.1
