--- a/fixtures/vcr_cassettes/ScienceWireClient/_query_sciencewire_by_author_name/with_common_last_name_first_name/returns_a_list_of_sciencewire_ids.yml
+++ b/fixtures/vcr_cassettes/ScienceWireClient/_query_sciencewire_by_author_name/with_common_last_name_first_name/returns_a_list_of_sciencewire_ids.yml
@@ -5,60 +5,39 @@ http_interactions:
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: UTF-8
-      string: |-
-        <?xml version="1.0"?>
-              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-              <xmlQuery><![CDATA[
-               <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/
-              XMLSchema">
-                <Criterion>
-                  <Criteria><Criterion>
-                      <TextSearch>
-                          <QueryPredicate>("smith,james" or "SMITH,J") and Stanford</QueryPredicate>
-                          <SearchType>ExactMatch</SearchType>
-                          <Columns>AggregateText</Columns>
-                          <MaximumRows>200</MaximumRows>
-                          </TextSearch>
-                    </Criterion><Criterion>
-                        <Filter>
-                          <Column>AuthorLastName</Column>
-                          <Operator>BeginsWith</Operator>
-                          <Value>SMITH</Value>
-                        </Filter>
-                      </Criterion><Criterion>
-                        <Filter>
-                          <Column>AuthorFirstName</Column>
-                          <Operator>BeginsWith</Operator>
-                          <Value>J</Value>
-                        </Filter>
-                      </Criterion><Criterion>
-                            <Filter>
-                              <Column>DocumentCategory</Column>
-                              <Operator>In</Operator>
-                              <Values>
-                                <Value>Journal Document</Value>
-                                <Value>Conference Proceeding Document</Value>
-                              </Values>
-                            </Filter>
-                          </Criterion></Criteria>
-                </Criterion>
-                <Columns>
-                  <SortColumn>
-                    <Column>Rank</Column>
-                    <Direction>Descending</Direction>
-                  </SortColumn>
-                </Columns>
-               <MaximumRows>200</MaximumRows>
-              </query>
-              ]]></xmlQuery>
-              </ScienceWireQueryXMLParameter>
+      string: "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>          <![CDATA[\n
+        \                        <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n              <Criterion>\n
+        \               <Criteria>\n                              <Criterion>\n              <TextSearch>\n
+        \               <QueryPredicate>(\"smith,james\" or \"SMITH,J\") and \"stanford\"</QueryPredicate>\n
+        \               <SearchType>ExactMatch</SearchType>\n                <Columns>AggregateText</Columns>\n
+        \               <MaximumRows>200</MaximumRows>\n              </TextSearch>\n
+        \           </Criterion>\n\n                                <Criterion>\n
+        \               <Filter>\n                  <Column>AuthorLastName</Column>\n
+        \                 <Operator>BeginsWith</Operator>\n                  <Value>SMITH</Value>\n
+        \               </Filter>\n              </Criterion>\n\n                                <Criterion>\n
+        \               <Filter>\n                  <Column>AuthorFirstName</Column>\n
+        \                 <Operator>BeginsWith</Operator>\n                  <Value>J</Value>\n
+        \               </Filter>\n              </Criterion>\n\n                  \n
+        \                 \n                              <Criterion>\n              <Filter>\n
+        \               <Column>DocumentCategory</Column>\n                <Operator>In</Operator>\n
+        \               <Values>\n                  <Value>Journal Document</Value>\n
+        \                 <Value>Conference Proceeding Document</Value>\n                </Values>\n
+        \             </Filter>\n            </Criterion>\n\n                </Criteria>\n
+        \             </Criterion>\n                          <Columns>\n              <SortColumn>\n
+        \               <Column>Rank</Column>\n                <Direction>Descending</Direction>\n
+        \             </SortColumn>\n            </Columns>\n\n              <MaximumRows>200</MaximumRows>\n
+        \           </query>\n\n            ]]>\n</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:49:20 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -87,37 +66,41 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:05 GMT
+      - Wed, 04 May 2016 00:49:19 GMT
       Content-Length:
       - '280'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>129740</queryID>\r\n
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>240514</queryID>\r\n
         \ <queryResultRows>17</queryResultRows>\r\n  <totalRows>17</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:06 GMT
+  recorded_at: Wed, 04 May 2016 00:49:20 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/129740?format=xml&page=0&pageSize=2147483647&v=version/3
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240514?format=xml&page=0&pageSize=2147483647&v=version/4
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:49:20 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
   response:
     status:
       code: 200
@@ -136,7 +119,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:06 GMT
+      - Wed, 04 May 2016 00:49:20 GMT
       Content-Length:
       - '40801'
     body:
@@ -603,5 +586,5 @@ http_interactions:
         \   <AuthorCitationCountList>1,0,0|2,0,0</AuthorCitationCountList>\r\n    <CopyrightStateProvince>TX</CopyrightStateProvince>\r\n
         \   <CopyrightCountry>UNITED STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:06 GMT
+  recorded_at: Wed, 04 May 2016 00:49:22 GMT
 recorded_with: VCR 3.0.1
