--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_from_directory_of_wos_id_files/processes_only_bibtex_items_of_type_inproceedings.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_from_directory_of_wos_id_files/processes_only_bibtex_items_of_type_inproceedings.yml
@@ -32,12 +32,14 @@ http_interactions:
             ]]></xmlQuery>
               </ScienceWireQueryXMLParameter>
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:50:14 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,7 +68,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:08 GMT
+      - Wed, 04 May 2016 00:50:13 GMT
       Content-Length:
       - '278'
     body:
@@ -75,28 +77,32 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>136741</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:08 GMT
+  recorded_at: Wed, 04 May 2016 00:50:14 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/136741?format=xml&page=0&pageSize=2147483647&v=version/3
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/136741?format=xml&page=0&pageSize=2147483647&v=version/4
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:50:14 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
   response:
     status:
       code: 200
@@ -115,7 +121,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:08 GMT
+      - Wed, 04 May 2016 00:50:14 GMT
       Content-Length:
       - '2964'
     body:
@@ -156,7 +162,7 @@ http_interactions:
         \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:08 GMT
+  recorded_at: Wed, 04 May 2016 00:50:14 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -176,7 +182,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Tue, 05 Apr 2016 23:39:08 GMT
+      - Wed, 04 May 2016 00:50:15 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -184,12 +190,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DD14CA7044C9C1_0366SID
+      - 08DE4F0972947471_0010SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DD14CA7044C9C1_0366SID; domain=.nih.gov; path=/; expires=Wed, 05
-        Apr 2017 23:39:08 GMT
+      - ncbi_sid=08DE4F0972947471_0010SID; domain=.nih.gov; path=/; expires=Thu, 04
+        May 2017 00:50:15 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -202,5 +208,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:08 GMT
+  recorded_at: Wed, 04 May 2016 00:50:15 GMT
 recorded_with: VCR 3.0.1
