--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_existing_sciencewire_pub/does_not_create_duplicate_contributions.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_existing_sciencewire_pub/does_not_create_duplicate_contributions.yml
@@ -4,23 +4,27 @@ http_interactions:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationItems?format=xml&publicationItemIDs=
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:50:00 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
   response:
     status:
       code: 500
@@ -39,7 +43,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:25 GMT
+      - Wed, 04 May 2016 00:50:00 GMT
       Content-Length:
       - '1208'
     body:
@@ -58,7 +62,7 @@ http_interactions:
         \ <h3>There is a problem with the resource you are looking for, and it cannot
         be displayed.</h3>\r\n </fieldset></div>\r\n</div>\r\n</body>\r\n</html>\r\n"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:25 GMT
+  recorded_at: Wed, 04 May 2016 00:50:01 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -78,7 +82,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Tue, 05 Apr 2016 23:39:26 GMT
+      - Wed, 04 May 2016 00:50:01 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -86,12 +90,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE75217044CAE1_0986SID
+      - 9DFD28CE72947391_0342SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE75217044CAE1_0986SID; domain=.nih.gov; path=/; expires=Wed, 05
-        Apr 2017 23:39:26 GMT
+      - ncbi_sid=9DFD28CE72947391_0342SID; domain=.nih.gov; path=/; expires=Thu, 04
+        May 2017 00:50:01 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -104,28 +108,32 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:26 GMT
+  recorded_at: Wed, 04 May 2016 00:50:01 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationItems?format=xml&publicationItemIDs=
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:50:01 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
   response:
     status:
       code: 500
@@ -144,7 +152,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:26 GMT
+      - Wed, 04 May 2016 00:50:01 GMT
       Content-Length:
       - '1208'
     body:
@@ -163,7 +171,7 @@ http_interactions:
         \ <h3>There is a problem with the resource you are looking for, and it cannot
         be displayed.</h3>\r\n </fieldset></div>\r\n</div>\r\n</body>\r\n</html>\r\n"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:26 GMT
+  recorded_at: Wed, 04 May 2016 00:50:02 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -183,7 +191,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Tue, 05 Apr 2016 23:39:26 GMT
+      - Wed, 04 May 2016 00:50:02 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -191,12 +199,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE22247044CAE1_0926SID
+      - 9DFD4024729473A1_0876SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE22247044CAE1_0926SID; domain=.nih.gov; path=/; expires=Wed, 05
-        Apr 2017 23:39:26 GMT
+      - ncbi_sid=9DFD4024729473A1_0876SID; domain=.nih.gov; path=/; expires=Thu, 04
+        May 2017 00:50:02 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -209,5 +217,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:26 GMT
+  recorded_at: Wed, 04 May 2016 00:50:02 GMT
 recorded_with: VCR 3.0.1
