--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_run_consecutively/should_be_idempotent_for_contributions.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_run_consecutively/should_be_idempotent_for_contributions.yml
@@ -4,23 +4,27 @@ http_interactions:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationItems?format=xml&publicationItemIDs=42711845,22686456
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:49:55 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
   response:
     status:
       code: 200
@@ -39,7 +43,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:31 GMT
+      - Wed, 04 May 2016 00:49:55 GMT
       Content-Length:
       - '6476'
     body:
@@ -125,7 +129,7 @@ http_interactions:
         \   <CopyrightPublisher>LIPPINCOTT WILLIAMS &amp; WILKINS</CopyrightPublisher>\r\n
         \   <CopyrightCity>PHILADELPHIA</CopyrightCity>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:32 GMT
+  recorded_at: Wed, 04 May 2016 00:49:56 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -145,7 +149,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 05 Apr 2016 23:39:33 GMT
+      - Wed, 04 May 2016 00:49:56 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -153,12 +157,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE1DE27044CB51_0005SID
+      - 08DE757272947341_0256SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE1DE27044CB51_0005SID; domain=.nih.gov; path=/; expires=Wed, 05
-        Apr 2017 23:39:33 GMT
+      - ncbi_sid=08DE757272947341_0256SID; domain=.nih.gov; path=/; expires=Thu, 04
+        May 2017 00:49:56 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -455,28 +459,32 @@ http_interactions:
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:33 GMT
+  recorded_at: Wed, 04 May 2016 00:49:56 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationItems?format=xml&publicationItemIDs=
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:49:56 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
   response:
     status:
       code: 500
@@ -495,7 +503,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:34 GMT
+      - Wed, 04 May 2016 00:49:56 GMT
       Content-Length:
       - '1208'
     body:
@@ -514,7 +522,7 @@ http_interactions:
         \ <h3>There is a problem with the resource you are looking for, and it cannot
         be displayed.</h3>\r\n </fieldset></div>\r\n</div>\r\n</body>\r\n</html>\r\n"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:34 GMT
+  recorded_at: Wed, 04 May 2016 00:49:57 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -534,7 +542,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Tue, 05 Apr 2016 23:39:34 GMT
+      - Wed, 04 May 2016 00:49:57 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -542,12 +550,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 9DFC31897044CB61_0857SID
+      - 08DE118372947351_0527SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFC31897044CB61_0857SID; domain=.nih.gov; path=/; expires=Wed, 05
-        Apr 2017 23:39:34 GMT
+      - ncbi_sid=08DE118372947351_0527SID; domain=.nih.gov; path=/; expires=Thu, 04
+        May 2017 00:49:57 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -560,5 +568,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:34 GMT
+  recorded_at: Wed, 04 May 2016 00:49:57 GMT
 recorded_with: VCR 3.0.1
