--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_sw_pubs_by_wos_id_for_author/creates_ScienceWire_Publications_with_an_array_of_WebOfScience_IDs_for_a_given_author.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_sw_pubs_by_wos_id_for_author/creates_ScienceWire_Publications_with_an_array_of_WebOfScience_IDs_for_a_given_author.yml
@@ -34,12 +34,14 @@ http_interactions:
             ]]></xmlQuery>
               </ScienceWireQueryXMLParameter>
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:49:46 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -68,7 +70,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:12 GMT
+      - Wed, 04 May 2016 00:49:46 GMT
       Content-Length:
       - '277'
     body:
@@ -77,28 +79,32 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>81941</queryID>\r\n
         \ <queryResultRows>3</queryResultRows>\r\n  <totalRows>3</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:12 GMT
+  recorded_at: Wed, 04 May 2016 00:49:47 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/81941?format=xml&page=0&pageSize=2147483647&v=version/3
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/81941?format=xml&page=0&pageSize=2147483647&v=version/4
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:49:47 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
   response:
     status:
       code: 200
@@ -117,7 +123,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:12 GMT
+      - Wed, 04 May 2016 00:49:46 GMT
       Content-Length:
       - '9645'
     body:
@@ -235,7 +241,7 @@ http_interactions:
         \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:12 GMT
+  recorded_at: Wed, 04 May 2016 00:49:47 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -255,7 +261,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 05 Apr 2016 23:39:13 GMT
+      - Wed, 04 May 2016 00:49:47 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -263,12 +269,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 9DFD5E097044CA11_0889SID
+      - 08DD5BAC729472B1_0083SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFD5E097044CA11_0889SID; domain=.nih.gov; path=/; expires=Wed, 05
-        Apr 2017 23:39:13 GMT
+      - ncbi_sid=08DD5BAC729472B1_0083SID; domain=.nih.gov; path=/; expires=Thu, 04
+        May 2017 00:49:47 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -962,5 +968,5 @@ http_interactions:
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:13 GMT
+  recorded_at: Wed, 04 May 2016 00:49:48 GMT
 recorded_with: VCR 3.0.1
