--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_sw_pubs_by_wos_id_for_author/does_not_create_empty_values_in_the_pub_hash_for_pmid_or_an_empty_PMID_identifier.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_sw_pubs_by_wos_id_for_author/does_not_create_empty_values_in_the_pub_hash_for_pmid_or_an_empty_PMID_identifier.yml
@@ -32,12 +32,14 @@ http_interactions:
             ]]></xmlQuery>
               </ScienceWireQueryXMLParameter>
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:49:45 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,7 +68,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:14 GMT
+      - Wed, 04 May 2016 00:49:45 GMT
       Content-Length:
       - '277'
     body:
@@ -75,28 +77,32 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>82248</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:14 GMT
+  recorded_at: Wed, 04 May 2016 00:49:45 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/82248?format=xml&page=0&pageSize=2147483647&v=version/3
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/82248?format=xml&page=0&pageSize=2147483647&v=version/4
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:49:45 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
   response:
     status:
       code: 200
@@ -115,7 +121,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:39:14 GMT
+      - Wed, 04 May 2016 00:49:45 GMT
       Content-Length:
       - '3567'
     body:
@@ -160,7 +166,7 @@ http_interactions:
         \   <AuthorCitationCountList>1,0,5|2,0,5</AuthorCitationCountList>\r\n    <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n
         \   <CopyrightCountry>UNITED STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:15 GMT
+  recorded_at: Wed, 04 May 2016 00:49:46 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -180,7 +186,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Tue, 05 Apr 2016 23:39:15 GMT
+      - Wed, 04 May 2016 00:49:46 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -188,12 +194,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DD1CD77044CA31_0130SID
+      - 9DFD17DE729472A1_0093SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DD1CD77044CA31_0130SID; domain=.nih.gov; path=/; expires=Wed, 05
-        Apr 2017 23:39:15 GMT
+      - ncbi_sid=9DFD17DE729472A1_0093SID; domain=.nih.gov; path=/; expires=Thu, 04
+        May 2017 00:49:46 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -206,5 +212,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:39:15 GMT
+  recorded_at: Wed, 04 May 2016 00:49:46 GMT
 recorded_with: VCR 3.0.1
