--- a/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_pmid/returns_one_document.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_pmid/returns_one_document.yml
@@ -163,4 +163,75 @@ http_interactions:
         dGlvbkl0ZW0+DQo8L0FycmF5T2ZQdWJsaWNhdGlvbkl0ZW0+
     http_version: 
   recorded_at: Tue, 05 Apr 2016 23:40:08 GMT
+- request:
+    method: get
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/142975?format=xml&page=0&pageSize=2147483647&v=version/4
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Accept:
+      - "*/*"
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 04 May 2016 00:38:35 GMT
+      Licenseid:
+      - Settings.SCIENCEWIRE.LICENSE_ID
+      Host:
+      - Settings.SCIENCEWIRE.HOST
+      Connection:
+      - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Wed, 04 May 2016 00:38:34 GMT
+      Content-Length:
+      - '1881'
+    body:
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
+        \   <PublicationItemID>64740795</PublicationItemID>\r\n    <Title>Rights and
+        responsibilities of electronic health records (EHR) users caring for children.</Title>\r\n
+        \   <Abstract />\r\n    <AuthorList>Sittig,Dean,F|Singh,Hardeep,|Longhurst,Christopher,A</AuthorList>\r\n
+        \   <AuthorCount>3</AuthorCount>\r\n    <KeywordList />\r\n    <DocumentTypeList>Journal
+        Article</DocumentTypeList>\r\n    <DocumentCategory>Journal Document</DocumentCategory>\r\n
+        \   <NumberOfReferences xsi:nil=\"true\" />\r\n    <TimesCited xsi:nil=\"true\"
+        />\r\n    <TimesNotSelfCited xsi:nil=\"true\" />\r\n    <PMID>24196758</PMID>\r\n
+        \   <PublicationSourceTitle>Archivos argentinos de pediatri´a</PublicationSourceTitle>\r\n
+        \   <Volume>111</Volume>\r\n    <Issue>6</Issue>\r\n    <Pagination>468-471</Pagination>\r\n
+        \   <PublicationDate>2013-12-01T00:00:00</PublicationDate>\r\n    <PublicationYear>2013</PublicationYear>\r\n
+        \   <PublicationSubjectCategoryList />\r\n    <ISSN>0325-0075</ISSN>\r\n    <DOI>10.1590/S0325-00752013000600003</DOI>\r\n
+        \   <ConferenceStartDate xsi:nil=\"true\" />\r\n    <ConferenceEndDate xsi:nil=\"true\"
+        />\r\n    <Rank xsi:nil=\"true\" />\r\n    <OrdinalRank>0</OrdinalRank>\r\n
+        \   <NormalizedRank xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\"
+        />\r\n    <IsObsolete>false</IsObsolete>\r\n    <CopyrightPublisher />\r\n
+        \   <CopyrightCity />\r\n    <PublicationImpactFactorList>0.291,2013,ExactPublicationYear|0.374,2014,MostRecentYear</PublicationImpactFactorList>\r\n
+        \   <PublicationCategoryRankingList>114/118;PEDIATRICS;2013;SC;ExactPublicationYear|116/119;PEDIATRICS;2014;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
+        \   <CopyrightStateProvince />\r\n    <CopyrightCountry>ARGENTINA</CopyrightCountry>\r\n
+        \ </PublicationItem>\r\n</ArrayOfPublicationItem>"
+    http_version: 
+  recorded_at: Wed, 04 May 2016 00:38:35 GMT
 recorded_with: VCR 3.0.1
