--- a/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/filters_out_batch/manual_pubs_from_the_resultset_if_SW/pubmed_records_were_found.yml
+++ b/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/filters_out_batch/manual_pubs_from_the_resultset_if_SW/pubmed_records_were_found.yml
@@ -30,12 +30,14 @@ http_interactions:
                             &lt;/query&gt;</xmlQuery>
               </ScienceWireQueryXMLParameter>
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 11 May 2016 04:11:47 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -64,7 +66,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:40:43 GMT
+      - Wed, 11 May 2016 04:11:48 GMT
       Content-Length:
       - '278'
     body:
@@ -73,104 +75,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>142959</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:40:43 GMT
-- request:
-    method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/142959?format=xml&page=0&pageSize=2147483647&v=version/3
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
-      Licenseid:
-      - Settings.SCIENCEWIRE.LICENSE_ID
-      Host:
-      - Settings.SCIENCEWIRE.HOST
-      Connection:
-      - Keep-Alive
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - application/xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Tue, 05 Apr 2016 23:40:43 GMT
-      Content-Length:
-      - '4218'
-    body:
-      encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
-        \   <PublicationItemID>10340243</PublicationItemID>\r\n    <Title>Convergence
-        and correlations among leaf size and function in seed plants: A comparative
-        test using independent contrasts</Title>\r\n    <Abstract>Prior studies of
-        a broad array of seed plants have reported strong correlations among leaf
-        life span, specific leaf area, nitrogen concentration, and carbon assimilation
-        rates, which have been interpreted as evidence of coordinated leaf physiological
-        strategies. However, it is not known whether these relationships reflect patterns
-        of evolutionary convergence, or whether they are due to contrasting characteristics
-        of major seed plant lineages. We reevaluated a published data set for these
-        seven traits measured in over 100 species, using phylogenetic independent
-        contrasts calculated over a range of alternative seed plant phylogenies derived
-        from recent molecular systematic analyses. In general, pairwise correlations
-        among these seven traits were similar with and without consideration of phylogeny,
-        and results were robust over a range of alternative phylogenies. We also evaluated
-        relationships between these seven traits and lamina area, another important
-        aspect of leaf function, and found moderate correlations with specific leaf
-        area (0.64), mass-based photosynthesis (0.54), area-based nitrogen (-0.56),
-        and leaf life span (-0.42). However, several of these correlations were markedly
-        reduced using independent contrasts; for example, the correlation between
-        leaf life span and lamina area was reduced to close to zero. This change reflects
-        the large differences in both these traits between conifers and angiosperms
-        and the absence of a relationship between the traits within these groups.
-        This analysis illustrates that most interspecific relationships among leaf
-        functional traits, considered across a broad range of seed plant taxa, reflect
-        significant patterns of correlated evolutionary change, lending further support
-        to the adaptive interpretation of these relationships.</Abstract>\r\n    <AuthorList>Ackerly,D,D|Reich,P,B</AuthorList>\r\n
-        \   <AuthorCount>2</AuthorCount>\r\n    <KeywordList>PROGRESS REPORT|DATA
-        SETS|RBCL|PHYLOGENY|LIFE-SPAN|CROWN ARCHITECTURE|SEQUENCE DATA|TROPICAL TREES|CORNERS
-        RULES|TAXONOMIC RELATEDNESS|independent contrasts|specific leaf area|comparative
-        method|photosynthesis|leaf size|leaf life span|seed plants|correlated evolution</KeywordList>\r\n
-        \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
-        Document</DocumentCategory>\r\n    <NumberOfReferences>65</NumberOfReferences>\r\n
-        \   <TimesCited>162</TimesCited>\r\n    <TimesNotSelfCited>143</TimesNotSelfCited>\r\n
-        \   <PMID>10487815</PMID>\r\n    <WoSItemID>000082779300008</WoSItemID>\r\n
-        \   <PublicationSourceTitle>AMERICAN JOURNAL OF BOTANY</PublicationSourceTitle>\r\n
-        \   <Volume>86</Volume>\r\n    <Issue>9</Issue>\r\n    <Pagination>1272-1281</Pagination>\r\n
-        \   <PublicationDate>1999-09-01T00:00:00</PublicationDate>\r\n    <PublicationYear>1999</PublicationYear>\r\n
-        \   <PublicationType>Journal</PublicationType>\r\n    <PublicationSubjectCategoryList>Plant
-        Sciences</PublicationSubjectCategoryList>\r\n    <ISSN>0002-9122</ISSN>\r\n
-        \   <ConferenceStartDate xsi:nil=\"true\" />\r\n    <ConferenceEndDate xsi:nil=\"true\"
-        />\r\n    <Rank xsi:nil=\"true\" />\r\n    <OrdinalRank>0</OrdinalRank>\r\n
-        \   <NormalizedRank xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\"
-        />\r\n    <IsObsolete>false</IsObsolete>\r\n    <CopyrightPublisher>BOTANICAL
-        SOC AMER INC</CopyrightPublisher>\r\n    <CopyrightCity>ST LOUIS</CopyrightCity>\r\n
-        \   <PublicationImpactFactorList>2.383,1999,ExactPublicationYear|2.463,2013,MostRecentYear</PublicationImpactFactorList>\r\n
-        \   <PublicationCategoryRankingList>18/136;PLANT SCIENCES;1999;SC;ExactPublicationYear|52/199;PLANT
-        SCIENCES;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,9,153|2,10,152</AuthorCitationCountList>\r\n
-        \   <CopyrightStateProvince>MO</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
-        STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
-    http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:40:43 GMT
+  recorded_at: Wed, 11 May 2016 04:11:48 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/142959?format=xml&page=0&pageSize=2147483647&v=version/4
@@ -185,7 +90,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 04 May 2016 00:38:34 GMT
+      - Wed, 11 May 2016 04:11:48 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -214,7 +119,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 May 2016 00:38:34 GMT
+      - Wed, 11 May 2016 04:11:49 GMT
       Content-Length:
       - '4218'
     body:
@@ -271,5 +176,5 @@ http_interactions:
         \   <CopyrightStateProvince>MO</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Wed, 04 May 2016 00:38:34 GMT
+  recorded_at: Wed, 11 May 2016 04:11:49 GMT
 recorded_with: VCR 3.0.1
