--- a/fixtures/vcr_cassettes/SulBib_API/POST_/authorship/success/with_cap_profile_id/behaves_like_it_creates_new_contributions_and_publications/for_a_new_ScienceWire_publication/adds_new_ScienceWire_publication_with_proper_identifiers_section.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/POST_/authorship/success/with_cap_profile_id/behaves_like_it_creates_new_contributions_and_publications/for_a_new_ScienceWire_publication/adds_new_ScienceWire_publication_with_proper_identifiers_section.yml
@@ -4,23 +4,27 @@ http_interactions:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationItems?format=xml&publicationItemIDs=10379039
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: ''
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.9.2
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Wed, 11 May 2016 04:10:05 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
       - Settings.SCIENCEWIRE.HOST
       Connection:
       - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
   response:
     status:
       code: 200
@@ -39,7 +43,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 05 Apr 2016 23:38:38 GMT
+      - Wed, 11 May 2016 04:10:06 GMT
       Content-Length:
       - '3660'
     body:
@@ -89,7 +93,7 @@ http_interactions:
         \   <CopyrightPublisher>SPRINGER</CopyrightPublisher>\r\n    <CopyrightCity>DORDRECHT</CopyrightCity>\r\n
         \ </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:38:38 GMT
+  recorded_at: Wed, 11 May 2016 04:10:06 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -109,7 +113,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 05 Apr 2016 23:38:38 GMT
+      - Wed, 11 May 2016 04:10:06 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -117,12 +121,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 08DE37E67044C7E1_0186SID
+      - 9DFC5FF3732B09E1_0288SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=08DE37E67044C7E1_0186SID; domain=.nih.gov; path=/; expires=Wed, 05
-        Apr 2017 23:38:38 GMT
+      - ncbi_sid=9DFC5FF3732B09E1_0288SID; domain=.nih.gov; path=/; expires=Thu, 11
+        May 2017 04:10:06 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -322,5 +326,5 @@ http_interactions:
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Tue, 05 Apr 2016 23:38:39 GMT
+  recorded_at: Wed, 11 May 2016 04:10:07 GMT
 recorded_with: VCR 3.0.1
